DTSPB-3367 CCD concurrency compliance for crons updating as caseworker